CSS FlatSIS Fix Dashboard tip message row too tall + lower list TH font size

--- a/assets/themes/FlatSIS/stylesheet.css
+++ b/assets/themes/FlatSIS/stylesheet.css
@@ -195,7 +195,7 @@ select {
 .widefat th,
 .widefat th a,
 .widefat th span {
-	font-size: 15px;
+	font-size: 14px;
 	text-transform: uppercase;
 }
 
@@ -696,6 +696,12 @@ select {
 .legend-gray,
 .legend-red {
 	font-size: 15px;
+}
+
+/* Fix Dashboard tip message row too tall */
+
+td .legend-gray:first-child {
+	margin-bottom: 0;
 }
 
 .header2 {
